--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 	<meta charset="utf-8" />
 	<title>Mandarin Flashcards</title>
 	<link rel=Stylesheet href=style.css type="text/css" title="stylesheet" media=screen />
-	<script type="text/javascript" src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.7.1.min.js"></script>
-	<script type="text/javascript" src="https://ajax.aspnetcdn.com/ajax/knockout/knockout-2.1.0.js"></script>
+	<script src="scripts/jquery-1.7.2.min.js" type="text/javascript"></script>
+	<script src="scripts/knockout-2.1.0.js" type="text/javascript"></script>
 </head>
 <body>
 <table style="height: 100%; width: 100%;">
