added "phonegap.js" reference

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<meta charset="utf-8" />
 	<title>Mandarin Flashcards</title>
 	<link rel=Stylesheet href=style.css type="text/css" title="stylesheet" media=screen />
+	<script src="phonegap.js" type="text/javascript" charset="utf-8"></script>
 	<script src="scripts/jquery-1.7.2.min.js" type="text/javascript"></script>
 	<script src="scripts/knockout-2.1.0.js" type="text/javascript"></script>
 </head>
