Re-added phonegap.js

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<meta charset="utf-8" />
 	<title>Mandarin Flashcards</title>
     <link href="/Content/bootstrap.min.css" rel="stylesheet">
+    <script src="phonegap.js"></script>
 	<script src="scripts/jquery-1.8.3.min.js"></script>
 	<script src="scripts/knockout-2.2.0.js"></script>
     <script src="scripts/bootstrap.min.js"></script>
